--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -9,7 +9,7 @@
 #   Latest themes (may require updating): https://sourcethemes.com/academic/themes/
 #   Browse built-in themes in `themes/academic/data/themes/`
 #   Browse user installed themes in `data/themes/`
-theme = "minimal"
+theme = "apogee"
 
 # Enable users to switch between day and night mode?
 day_night = false
@@ -41,7 +41,7 @@ local_business_type = ""
 
 # Organization name (optional)
 # Enter an organization or project name. Defaults to the site title from `config.toml`.
-org_name = "JMU Autonomous Vehicle"
+org_name = "JMU Autonomous Vehicle Research"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
 description = ""
