--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -91,7 +91,7 @@ phone = "888 888 88 88"
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
 
 # Directions for visitors to locate you.
-directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
+#directions = "Enter Building 1 and take the stairs to Office 200 on Floor 2"
 
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
